--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,7 +1,26 @@
 @charset "utf-8";
 
 /* ==========================================================================
-   Some Stylesheets
+  Global
 ========================================================================== */
-@import "stylesheet_01";
-@import "stylesheet_02";
+
+@import "variables";
+
+
+/* ==========================================================================
+  Utilities
+========================================================================== */
+
+@import "utilities/mixins";
+
+
+/* ==========================================================================
+  Base
+========================================================================== */
+
+@import "base/global";
+@import "base/accessibility";
+@import "base/layout";
+@import "base/responsive";
+@import "base/typography";
+
